--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,10 @@ dependencies {
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
 
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
